--- a/src/global-styles.css
+++ b/src/global-styles.css
@@ -68,7 +68,8 @@ h1 {
     background-color: rgb(150, 186, 223);
     border: 4px solid black;
     border-radius: 12px;
-    float: right;
+    margin-left: auto;
+    margin-right: 0;
 
     transition: background-color ease-in-out 0.2s;
 }
